--- a/1prjt/style.css
+++ b/1prjt/style.css
@@ -4,7 +4,7 @@
     --green:#27ae60;
     --black:#192a56;
     --light-color:#666;
-    --box-shadow:0 .5rem 1.5rem rgb(2, 75, 8);
+    --box-shadow:0 .5rem 1.5rem rgb(184, 183, 183);
 
 }
 
@@ -18,6 +18,7 @@
     border: none;
     text-transform: capitalize;
     transition: all .2s linear;
+    scroll-behavior: smooth;
 }
 
 html{
@@ -26,6 +27,7 @@ html{
     scroll-padding-top: 5.5rem;
     scroll-behavior: smooth;
 }
+
 section{
     padding: 2rem 9%;
 }
@@ -91,7 +93,7 @@ header .navbar a{
 }
 header .navbar a.active,
 header .navbar a:hover{
-    columns: white;
+    color: white;
     background: var(--green);
 }
 
@@ -163,10 +165,7 @@ header .icons #menu-bars{
     top: 2rem; right: 3rem;
     font-size: 5rem;
 }
-.home{
-    padding-left: 16rem;
-    padding-top: 10rem;
-}
+
 .home .home-slider .slide{
     display: flex;
     align-items: center;
@@ -212,11 +211,15 @@ header .icons #menu-bars{
     background: var(--green);
 
 }
+.dishes{
+    margin-top: -10rem;
+}
 .dishes .box-container{
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(38rem,5fr));
     gap: 3.5rem;
     margin-top: 1.5rem;
+    margin-top: 9rem;
 }
 .dishes .box-container .box{
    padding: 2.5rem;
@@ -279,31 +282,342 @@ header .icons #menu-bars{
     margin-right: 1rem;
     font-size: 2.5rem;
 }
+.about{
+    padding-top: 5rem;
+}
+.about .row{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    align-items: center;
+    padding-top: 5rem;
+}
+.about .row .image{
+    flex:1 1 45rem;
+    padding-right: 6rem;
+    
+}
 
 
+/* .about .row .image img{
+    width: 100%;
+} */
+.about .row .content{
+    flex: 1 1 45rem;
+}
+.about .row .content h3{
+    color: var(--black);
+    font-size: 4rem;
+    padding: .5rem 0;
+}
+.about .row .content p{
+    color: var(--light-color);
+    font-size: 1.5rem;
+    padding: .5rem 0;
+    line-height: 2;
+}
+.about .row .content .icons-container{
+    display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
+    padding: 1rem 0;
+    margin-top: .5rem;
+}
+.about .row .content .icons-container .icons{
+    box-shadow: var(--light-color);
+    background: rgb(221, 221, 221);
+    border-radius: .5rem;
+    border: .1rem solid rgba(0,0,0,.2);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    flex: 1 1 17rem;
+    padding: 1.5rem 1rem;
+}
+.about .row .content .icons-container .icons i{
+    font-size: 2.5rem;
+    color: var(--green);
+}
+.about .row .content .icons-container .icons span{
+    font-size: 1.5rem;
+    color: var(--black);
+}
+.menu .box-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(38rem,5fr));
+    gap: 3.5rem;
+    padding-top: 4rem;
+} 
+
+.menu .box-container .box{
+    background: white;
+    border:.1rem solid rgba(0,0,0,.2);
+    border-radius: .5rem;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+
+}
+
+.menu .box-container .box .image{
+    height: 25rem;
+    width: 100%;
+    padding: 1.5rem;
+    overflow: hidden;
+    position: relative;
+
+}
+.menu .box-container .box .image img{
+    height: 100%;
+    width: 100%;
+    border-radius: .5rem;
+
+} 
+
+.menu .box-container .box .image .fa-heart{
+    position: absolute;
+    top: 2.5rem; right: 2.5rem;
+    height: 5rem;
+    width: 5rem;
+    line-height: 5rem;
+    text-align: center;
+    font-size: 2rem;
+    background: white;
+    border-radius: 50%;
+    color: var(--black);
+}
+.menu .box-container .box .image .fa-heart:hover{
+    background-color: var(--green);
+    color: white;
+}
+
+.menu .box-container .box .content{
+    padding: 2rem;
+    padding-top: 0;
+}
+.menu .box-container .box .content .stars{
+    padding-bottom: 1rem;
+}
+.menu .box-container .box .content .stars i{
+    font-size: 1.7rem;
+    color: var(--green);
+}
+.menu .box-container .box .content h3{
+    color: var(--black);
+    font-size: 2.5rem;
+
+}
+.menu .box-container .box .content p{
+    color: var(--light-color);
+    font-size: 1.7rem;
+    padding: 5rem 0;
+}
+.menu .box-container .box .content .price{
+    font-size: 2.5rem;
+    color: var(--green);
+    padding-left: 6rem;
+    margin-left: 5rem;
+}
+
+.review .slide{
+
+    padding: 2rem;
+    box-shadow: var(--box-shadow);
+    border: .1ren solid rgba(0, 0, 0, 0.2);
+    border-radius: .5rem;
+    position: relative;
+
+}
+.review-slider{
+    padding-top: 4rem;
+}
+.review .slide .fa-quote-right{
+    position: absolute;
+    top: 2rem; right: 2rem;
+    font-size: 6rem;
+    color: #ccc;
+
+}
+.review .slide .user{
+    display: flex;
+    gap: 1.5rem;
+    align-items: center;
+    padding-bottom: 1.5rem;
 
 
+}
+.review .wrapper{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5.5rem;
+}
+.review .slide .user img{
+    height: 7rem;
+    width: 7rem;
+    border-radius: 50%;
+    object-fit: cover;
 
+}
+.review .slide .user h3{
+    color: var(--black);
+    font-size: 2rem;
+    padding-bottom: .5rem;
 
+}
+.review .slide .user{
+    font-size: 1.3rem;
+    color: var(--green);
+}
+.review .slide p{
+    font-size: 1.5rem;
+    line-height: 1.8;
+    color: var(--light-color);
+}
+/* .review .wrapper .slide:hover{
+    .review .wrapper{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 5.5rem;
+    }
+    .review .slide .user img{
+        height: 7rem;
+        width: 7rem;
+        border-radius: 50%;
+        object-fit: cover;
+    
+    }
+    .review .slide .user h3{
+        color: var(--black);
+        font-size: 3rem;
+        padding-bottom: .5rem;
+    
+    }
+    .review .slide .user{
+        font-size: 2.3rem;
+        color: var(--green);
+    }
+    .review .slide p{
+        font-size: 2.5rem;
+        line-height: 2.8;
+        color: var(--light-color);
+    }
+} */
+.order form{
+    max-width: 90rem;
+    border-radius: .5rem;
+    box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+    border: .1rem solid rgba(0, 0, 0, 0.2);
+    background: rgb(143, 223, 153);
+    padding: 1.5rem;
+    margin: 0 auto;
+   margin-top: 2rem;
+   margin-bottom: 4rem;
+}
+.order form .inputBox{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 
+}
+.order form .inputBox .input{
+    width: 49%;
+    color: white;
+} 
+.order form .inputBox .input span{
+    display: block;
+    padding: .1rem 0;
+    font-size: 1.5rem;
+    color: black;
+    text-decoration: solid;
+    font-weight: bold;
+}
+.order form .inputBox .input input,
+.order form .inputBox .input textarea {
+    background: white;
+    border-radius:.5rem ;
+    padding: 1rem;
+    font-size: 1.6rem;
+    color: var(--black);
+    text-transform: none;
+    margin-bottom: 1rem;
+    width: 100%;
+}
+.order form .inputBox .input input:focus,
+.order form .inputBox .input textarea:focus{
+    border: .3rem solid var(--green);
+}
+.order form .inputBox .input textarea{
+    height: 20rem;
+    resize: none;
+}
+.order form  .order{
+   margin-top: 1rem;
+   
+   background-color: #078b1f;
+   padding: 1rem 2.5rem;
+   border-radius: .5rem;
+   font-size: 1.6rem;
+   padding-bottom: 1rem;
+   font-weight: bolder;
 
+}
+.order form .inputBox .input input::placeholder{
+    color: var(--green);
+}
+.footer .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(25rem,1fr));
+    gap: 1.5rem;
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+}
+.footer .box-container .box h3{
+    padding: .5rem 0;
+    font-size: 2.5rem;
+    color: var(--green);
+}
+.footer .box-container .box a{
+    display: block;
+    padding: .5rem 0;
+    font-size: 1.5rem;
+    color: var(--light-color);
+}
+.footer .box-container .box a:hover{
+    color: var(--green);
+    text-decoration: underline;
+}
+.footer .credit{
+    text-align: center;
+    border-top: .1rem solid rgba(0, 0, 0, 0.1);
+    color: var(--black);
+    padding: .5rem;
+    font-size: 1.7rem;
+    padding-top: 1.5rem;
+    margin-top: 1.5rem;
+}
+.footer .credit span{
+    color: var(--green);
+}
+.loader-container{
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 10000;
+    background: white;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+.loader-container img{
+    width: 35rem;
+    padding: 25rrem 25rem 25rem 25rem;
+}
+.loader-container.fade-out{
+    top: 110%;
+    opacity: 0;
+}
 
 
 
@@ -350,7 +664,7 @@ header .icons #menu-bars{
     }
     
 }
-@media (max-width:991px){
+@media (max-width:450px){
     html{
         font-size:50%;
     }
@@ -358,5 +672,8 @@ header .icons #menu-bars{
         height: auto;
         width: 100%;
     }
-   
+    .order form .inputBox .input{
+        width: 100%;
+        color: white;
+    }
 }
