--- a/1prjt/style.css
+++ b/1prjt/style.css
@@ -17,7 +17,7 @@
     outline: none;
     border: none;
     text-transform: capitalize;
-    transition: all .2s linear;
+    transition: all .2s ease-out;
     scroll-behavior: smooth;
 }
 
@@ -31,9 +31,9 @@ html{
 section{
     padding: 2rem 9%;
 }
-section:nth-child(even){
-    background: white;
-}
+/* section:nth-child(even){
+    background: #a3f4c9;
+} */
 .sub-heading{
     text-align: center;
     color: var(--green);
@@ -126,7 +126,7 @@ header .icons #menu-bars{
     height: 100%;
     width: 100%;
     z-index: 1004;
-    background:rgba(0,0,0,.8);
+    background:rgba(0, 0, 0, 0.8);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -231,6 +231,7 @@ header .icons #menu-bars{
    overflow: hidden;
    text-align: center;
 }
+
 .dishes .box-container .box .fa-heart,
 .dishes .box-container .box .fa-eye{
     position: absolute;
@@ -411,6 +412,8 @@ header .icons #menu-bars{
     font-size: 1.7rem;
     padding: 5rem 0;
 }
+.menu .box-container .box .content .btn{
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;}
 .menu .box-container .box .content .price{
     font-size: 2.5rem;
     color: var(--green);
@@ -422,8 +425,8 @@ header .icons #menu-bars{
 
     padding: 2rem;
     box-shadow: var(--box-shadow);
-    border: .1ren solid rgba(0, 0, 0, 0.2);
-    border-radius: .5rem;
+    border: .1rem solid rgba(0, 0, 0, 0.2);
+    border-radius: 1.5rem;
     position: relative;
 
 }
@@ -505,9 +508,9 @@ header .icons #menu-bars{
 } */
 
 .order form{
-    max-width: 90rem;
+    max-width: 100rem;
     border-radius: .5rem;
-    box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
     border: .1rem solid rgba(0, 0, 0, 0.2);
     background: rgb(143, 223, 153);
     padding: 1.5rem;
@@ -554,23 +557,34 @@ header .icons #menu-bars{
 }
 .order form  .order{
    margin-top: 1rem;
-   
-   background-color: #078b1f;
+   box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+   background-color: #1a2c79;
    padding: 1rem 2.5rem;
    border-radius: .5rem;
    font-size: 1.6rem;
    padding-bottom: 1rem;
    font-weight: bolder;
+   color: white;
 
 }
-.order form .inputBox .input input::placeholder{
+.order form .inputBox .input input::placeholder ,
+.order form .inputBox .input textarea::placeholder {
     color: var(--green);
+}
+.footer{
+    background-image: url(images/restaurant.png);
+   background-size: cover;
+   background-clip: border-box;
+   opacity: 1;
 }
 .footer .box-container{
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(25rem,1fr));
     gap: 1.5rem;
-
+    padding-top: 10rem;
+    padding-bottom: 10rem;
+    padding-left: 9rem;
+   
 }
 .footer .box-container .box h3{
     padding: .5rem 0;
@@ -620,7 +634,16 @@ header .icons #menu-bars{
     opacity: 0;
 }
 
-
+.footer .box-container .box a,
+.footer .box-container .credit{
+    color:white;
+}
+.credit{
+    color:white;
+}
+.footer .box-container .box h3{
+    font-weight: bolder;
+}
 
 @media (max-width:991px){
     html{
